// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionCard should not render hasClient 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-4"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Last check-in
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Insights id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Reporter
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHEL machine id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollectionCard should not render hasInsightsId 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-7"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Insights client
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <span>
            test-client
          </span>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last check-in
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Reporter
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHEL machine id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollectionCard should not render hasLastCheckIn 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-5"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Insights client
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <span>
            test-client
          </span>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Insights id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Reporter
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHEL machine id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollectionCard should not render hasMachineId 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-9"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Insights client
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <span>
            test-client
          </span>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last check-in
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Insights id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Reporter
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollectionCard should not render hasRegistered 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-6"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Insights client
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <span>
            test-client
          </span>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last check-in
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Insights id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Reporter
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHEL machine id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollectionCard should not render hasReporter 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-8"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Insights client
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <span>
            test-client
          </span>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last check-in
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Insights id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHEL machine id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollectionCard should render correctly - no data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-1"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Insights client
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last check-in
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Insights id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Reporter
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHEL machine id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollectionCard should render correctly with data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-2"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Insights client
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <span>
            test-client
          </span>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last check-in
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Insights id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Reporter
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHEL machine id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollectionCard should render extra 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-10"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Collection information
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Insights client
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <span>
            test-client
          </span>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last check-in
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Insights id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Reporter
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHEL machine id
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          something
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          with click
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//undefined"
          >
            1 tests
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
